--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "@types/vue-cropperjs": "^4.1.2",
     "@vueuse/core": "^9.8.2",
     "axios": "^1.2.1",
     "echarts": "^5.4.1",
