--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,13 @@
     "types": ["vite/client", "element-plus/global"]
   },
 
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/utils/scroll-to.js"
+  ],
   "exclude": ["node_modules", "dist", "script"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
