--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-cropper": "^1.0.5",
+    "vue-eslint-parser": "^9.0.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
