--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,6 @@ VITE_APP_ENV = 'development'
 
 # 若依管理系统/开发环境
 VITE_APP_BASE_API = '/dev-api'
+
+
+VITE_APP_BASE_URL = "http://180.100.200.130:8090/"
